implement role actions